--- a/idcardcamera/build.gradle
+++ b/idcardcamera/build.gradle
@@ -26,5 +26,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.+'
+
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+
     testImplementation 'junit:junit:4.12'
 }
