--- a/idcardcamera/src/main/AndroidManifest.xml
+++ b/idcardcamera/src/main/AndroidManifest.xml
@@ -18,8 +18,8 @@
         android:supportsRtl="true"
         >
         <activity
+            android:screenOrientation="portrait"
             android:name=".camera.CameraActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
             android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"/>
     </application>
 
